--- a/Dockerfile.panel
+++ b/Dockerfile.panel
@@ -3,8 +3,8 @@ FROM golang:1.25-alpine AS builder
 
 WORKDIR /app
 
-# 安装 git
-RUN apk add --no-cache git
+# 安装 git 和 Node.js 构建工具
+RUN apk add --no-cache git nodejs npm
 
 # 复制 go 模块文件
 COPY go.mod go.sum ./
@@ -13,8 +13,15 @@ RUN go mod download
 # 复制源代码
 COPY . .
 
-# 编译（静态链接）
+# 编译后端（静态链接）
 RUN CGO_ENABLED=0 GOOS=linux go build -ldflags="-s -w" -o panel ./cmd/server
+
+# 构建前端
+WORKDIR /app/frontend
+RUN npm install && npm run build
+
+# 返回工作目录
+WORKDIR /app
 
 # 运行阶段
 FROM alpine:latest
@@ -27,6 +34,9 @@ RUN addgroup -g 1000 app && adduser -u 1000 -G app -s /bin/sh -D app
 
 # 复制编译产物
 COPY --from=builder /app/panel /app/panel
+
+# 复制前端构建产物
+COPY --from=builder /app/frontend/dist /app/public
 
 # 复制配置模板和启动脚本
 COPY --from=builder /app/config/ /app/config/
