--- a/config/config.yaml
+++ b/config/config.yaml
@@ -7,29 +7,22 @@ server:
   mode: "release"
 
 database:
-  type: "mysql"
-  host: "${DB_HOST:-localhost}"
-  port: ${DB_PORT:-3306}
-  username: "${DB_USER:-root}"
-  password: "${DB_PASSWORD:-password}"
-  name: "${DB_NAME:-bakaray}"
-  max_open_conns: 25
-  max_idle_conns: 5
-  conn_max_lifetime: 300
+  type: "sqlite"
+  path: "data/bakaray.db"
 
 redis:
-  host: "${REDIS_HOST:-localhost}"
-  port: ${REDIS_PORT:-6379}
-  password: "${REDIS_PASSWORD:-}"
-  db: ${REDIS_DB:-0}
+  host: ""
+  port: 6379
+  password: ""
+  db: 0
   pool_size: 10
 
 site:
   name: "BakaRay"
   domain: "http://localhost:8080"
-  node_secret: "${NODE_SECRET:-your-node-secret-key}"
+  node_secret: "${NODE_SECRET:-change-this-secret-in-production}"
   node_report_interval: ${NODE_REPORT_INTERVAL:-30}
 
 jwt:
-  secret: "${JWT_SECRET:-your-jwt-secret-key}"
+  secret: "${JWT_SECRET:-change-this-secret-in-production}"
   expiration: 86400
