Refactor Docker and config for Redis and data paths
Updated Dockerfile and docker-compose files to create and mount /app/data and /app/logs directories, and to add a dedicated Redis service. Changed default database and Redis host paths to use absolute paths and 'localhost' respectively. Simplified entrypoint script and config loading to align with new directory structure and service dependencies.

--- a/Dockerfile.panel
+++ b/Dockerfile.panel
@@ -32,6 +32,9 @@ RUN apk --no-cache add ca-certificates tzdata curl bash gettext
 # 创建非 root 用户
 RUN addgroup -g 1000 app && adduser -u 1000 -G app -s /bin/sh -D app
 
+# 创建数据目录
+RUN mkdir -p /app/data /app/logs && chown -R app:app /app
+
 # 复制编译产物
 COPY --from=builder /app/panel /app/panel
 
