--- a/config/config.yaml
+++ b/config/config.yaml
@@ -8,10 +8,10 @@ server:
 
 database:
   type: "sqlite"
-  path: "data/bakaray.db"
+  path: "/app/data/bakaray.db"
 
 redis:
-  host: ""
+  host: "localhost"
   port: 6379
   password: ""
   db: 0
