Set default Redis password to 'bakaray-redis-password'
Updated the default Redis password in config files, docker-compose files, and Go config loader to 'bakaray-redis-password' for improved security and consistency across environments. Adjusted related healthchecks and environment variable defaults accordingly.

--- a/docker-compose.external.yml
+++ b/docker-compose.external.yml
@@ -13,8 +13,8 @@ services:
       - DB_PASSWORD=${DB_PASSWORD:-}
       - DB_NAME=${DB_NAME:-bakaray}
 
-  # Redis 配置
+  # Redis 配置（使用相同密码）
   bakaray-redis:
-    command: redis-server --appendonly yes${REDIS_PASSWORD:+ --requirepass $REDIS_PASSWORD}
+    command: redis-server --appendonly yes --requirepass bakaray-redis-password
     healthcheck:
-      test: ["CMD", "sh", "-c", "${REDIS_PASSWORD:+redis-cli -a $REDIS_PASSWORD ping || redis-cli ping}"]
+      test: ["CMD", "redis-cli", "-a", "bakaray-redis-password", "ping"]
