--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,9 +16,9 @@ services:
       - DB_TYPE=${DB_TYPE:-sqlite}
       - DB_PATH=${DB_PATH:-/app/data/bakaray.db}
       # Redis 配置
-      - REDIS_HOST=${REDIS_HOST:-bakaray-redis}
-      - REDIS_PORT=${REDIS_PORT:-6379}
-      - REDIS_PASSWORD=${REDIS_PASSWORD:-}
+      - REDIS_HOST=bakaray-redis
+      - REDIS_PORT=6379
+      - REDIS_PASSWORD=${REDIS_PASSWORD:-bakaray-redis-password}
       # 服务配置
       - SERVER_HOST=0.0.0.0
       - SERVER_PORT=8080
@@ -38,7 +38,7 @@ services:
       - bakaray_net
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
+      test: ["CMD", "redis-cli", "-a", "bakaray-redis-password", "ping"]
       interval: 30s
       timeout: 3s
       retries: 3
@@ -47,14 +47,14 @@ services:
   bakaray-redis:
     image: redis:7-alpine
     container_name: bakaray-redis
-    command: redis-server --appendonly yes${REDIS_PASSWORD:+ --requirepass $REDIS_PASSWORD}
+    command: redis-server --appendonly yes --requirepass bakaray-redis-password
     volumes:
       - bakaray_redis_data:/data
     networks:
       - bakaray_net
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "sh", "-c", "${REDIS_PASSWORD:+redis-cli -a $REDIS_PASSWORD ping || redis-cli ping}"]
+      test: ["CMD", "redis-cli", "-a", "bakaray-redis-password", "ping"]
       interval: 10s
       timeout: 5s
       retries: 5
