--- a/Dockerfile.panel
+++ b/Dockerfile.panel
@@ -3,8 +3,8 @@ FROM golang:1.25-alpine AS builder
 
 WORKDIR /app
 
-# 安装 git 和 Node.js 构建工具
-RUN apk add --no-cache git nodejs npm
+# 安装 git、Node.js 和 CGO 编译工具
+RUN apk add --no-cache git nodejs npm gcc musl-dev
 
 # 复制 go 模块文件
 COPY go.mod go.sum ./
@@ -13,8 +13,8 @@ RUN go mod download
 # 复制源代码
 COPY . .
 
-# 编译后端（静态链接）
-RUN CGO_ENABLED=0 GOOS=linux go build -ldflags="-s -w" -o panel ./cmd/server
+# 编译后端（启用 CGO 以支持 SQLite）
+RUN CGO_ENABLED=1 GOOS=linux go build -ldflags="-s -w" -o panel ./cmd/server
 
 # 构建前端
 WORKDIR /app/frontend
@@ -27,7 +27,7 @@ WORKDIR /app
 FROM alpine:latest
 
 # 安装运行时依赖
-RUN apk --no-cache add ca-certificates tzdata curl bash gettext
+RUN apk --no-cache add ca-certificates tzdata curl bash gettext sqlite-libs
 
 # 创建非 root 用户
 RUN addgroup -g 1000 app && adduser -u 1000 -G app -s /bin/sh -D app
