Add MySQL support and refactor account initialization
Introduces MySQL/MariaDB support alongside SQLite by updating configuration, environment variables, and repository logic. Adds a new `cmd/init-account` tool for creating initial users, removes in-server DB/user initialization, and updates documentation and scripts to reflect the new setup process. Refactors config loading, test coverage, and environment variable usage for improved clarity and flexibility.

--- a/docker-compose.external.yml
+++ b/docker-compose.external.yml
@@ -9,7 +9,7 @@ services:
       - DB_TYPE=${DB_TYPE:-mysql}
       - DB_HOST=${DB_HOST:-localhost}
       - DB_PORT=${DB_PORT:-3306}
-      - DB_USER=${DB_USER:-root}
+      - DB_USERNAME=${DB_USERNAME:-root}
       - DB_PASSWORD=${DB_PASSWORD:-}
       - DB_NAME=${DB_NAME:-bakaray}
 
