--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,16 @@
 # BakaRay 环境变量配置
 # 复制此文件为 .env 并修改相应值
 
-# ==================== 数据库配置 (外部 MySQL/MariaDB) ====================
+# ==================== 数据库配置 ====================
+# DB_TYPE 可选值: sqlite, mysql, mariadb
+DB_TYPE=sqlite              # 选择数据库类型
+DB_PATH=data/bakaray.db     # SQLite 数据库文件路径
+
+# 如果使用 MySQL/MariaDB，取消下面的注释并填写：
+# DB_TYPE=mysql
 DB_HOST=localhost           # 数据库主机地址
 DB_PORT=3306                # 数据库端口
-DB_USER=root                # 数据库用户名
+DB_USERNAME=root            # 数据库用户名
 DB_PASSWORD=your_password   # 数据库密码
 DB_NAME=bakaray             # 数据库名称
 
