Add initial admin user bootstrap via env vars
Introduces INIT_USERNAME, INIT_PASSWORD, INIT_ROLE, and INIT_GROUP environment variables to allow automatic creation of an initial admin user on container startup. Updates Dockerfile, entrypoint script, docker-compose.yml, and documentation to support this feature. Removes default admin user insertion from SQL migration.

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,12 @@ DB_USERNAME=root            # 数据库用户名
 DB_PASSWORD=your_password   # 数据库密码
 DB_NAME=bakaray             # 数据库名称
 
+# ==================== 初始管理员（可选）====================
+INIT_USERNAME=             # 入口脚本会在首次启动时创建此用户
+INIT_PASSWORD=             # 需要与 INIT_USERNAME 配对提供
+INIT_ROLE=admin            # 可选角色
+INIT_GROUP=0               # 可选用户组 ID
+
 # ==================== Redis 配置 ====================
 REDIS_HOST=redis            # Redis 主机地址 (docker 内使用服务名)
 REDIS_PORT=6379             # Redis 端口
