--- a/config/config.yaml
+++ b/config/config.yaml
@@ -20,9 +20,9 @@ redis:
 site:
   name: "BakaRay"
   domain: "http://localhost:8080"
-  node_secret: "${NODE_SECRET:-change-this-secret-in-production}"
-  node_report_interval: ${NODE_REPORT_INTERVAL:-30}
+  node_secret: "change-this-secret-in-production"
+  node_report_interval: 30
 
 jwt:
-  secret: "${JWT_SECRET:-change-this-secret-in-production}"
+  secret: "change-this-secret-in-production"
   expiration: 86400
