--- a/config/config.yaml
+++ b/config/config.yaml
@@ -9,11 +9,16 @@ server:
 database:
   type: "sqlite"
   path: "data/bakaray.db"
+  host: "localhost"
+  port: 3306
+  username: "root"
+  password: ""
+  name: "bakaray"
 
 redis:
-  host: "bakaray-redis"
+  host: "localhost"
   port: 6379
-  password: "bakaray-redis-password"
+  password: ""
   db: 0
   pool_size: 10
 
