--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "vue": "^3.5.13",
@@ -19,7 +22,11 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vitest/coverage-v8": "^2.1.8",
+    "@vitest/ui": "^2.1.8",
+    "happy-dom": "^15.11.0",
     "vite": "^6.0.7",
-    "sass": "^1.85.0"
+    "sass": "^1.85.0",
+    "vitest": "^2.1.8"
   }
 }
